Heroku file-upload

--- a/src/views/students.ejs
+++ b/src/views/students.ejs
@@ -86,7 +86,7 @@
                                     <div>
                                         <div class="modal fade" id="exampleModal1043" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                             <div class="modal-dialog">
-                                                <form action="/student/uploadhomework/<%= user.id %>" enctype="multipart/form-data" method="POST" class="modal-content upload_homework_form">
+                                                <form action="https://crm-panel-ejs.herokuapp.com/student/uploadhomework/<%= user.id %>" enctype="multipart/form-data" method="POST" class="modal-content upload_homework_form">
                                                     <div class="modal-header">
                                                         <h5 class="modal-title" id="exampleModalLabel">
                                                             Homework send!
